--- a/index.html
+++ b/index.html
@@ -8,5 +8,27 @@
     <title>Podcast Project</title>
 </head>
 <body>
+    <div class="navigation">
+        <img src="images/logo.svg" alt="logo" class="navigation__logo">
+        <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+        <label for="navi-toggle" class="navigation__button">
+            <span class="navigation__icon">&nbsp;</span>
+        </label>
+
+        <div class="navigation__background">&nbsp;</div>
+
+        <nav class="navigation__nav">
+            <ul class="navigation__list">
+                <li class="navigation__item"><a href="#" class="navigation__link">EPISODIOS</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">NOSOTROS</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">ENTREVISTAS</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">TOPICOS</a></li>
+            </ul>
+        </nav>
+    </div>
+    <header class="header">
+        
+
+    </header>
 </body>
 </html>
