--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" rel="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&family=IBM+Plex+Sans:wght@400;600&display=swap" rel="stylesheet">
     <title>Podcast Project</title>
 </head>
 <body>
@@ -26,8 +27,12 @@
             </ul>
         </nav>
     </div>
-    <header class="header">
-HOLA
+    <header class="header heading">
+        <h1 class="heading__1">
+            Hello <span class="heading__span">world</span> pale blue dot.
+        </h1>
+        <p class="paragraph">Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días.</p>
+        <a href="#" class="btn">CONOCÉ MÁS</a>
     </header>
 </body>
 </html>
