--- a/index.html
+++ b/index.html
@@ -34,5 +34,11 @@
         <p class="paragraph">Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días.</p>
         <a href="#" class="btn">CONOCÉ MÁS</a>
     </header>
+    <section class="episodes">
+        <div class="episodes__container">
+            <h1 class="episodes__heading">Episodios</h1> 
+        </div>    
+       
+    </section>
 </body>
 </html>
