fixing menu position and adding phone component

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Podcast Project</title>
 </head>
 <body>
+    <!--Nav Section-->
     <div class="navigation">
         <img src="images/logo.svg" alt="logo" class="navigation__logo">
         <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
@@ -27,6 +28,8 @@
             </ul>
         </nav>
     </div>
+
+    <!--Header Section-->
     <header class="header heading">
         <h1 class="heading__1">
             Hello <span class="heading__span">world</span> pale blue dot.
@@ -34,11 +37,29 @@
         <p class="paragraph">Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días.</p>
         <a href="#" class="btn">CONOCÉ MÁS</a>
     </header>
+
+    <!--Episodes section-->
     <section class="episodes">
         <div class="episodes__container">
             <h1 class="episodes__heading">Episodios</h1> 
-        </div>    
-       
+        
+            <article class="episodes__episode">
+                <iframe class="episodes__episode--1" src="https://open.spotify.com/embed-podcast/episode/0Inn9ZOJrwC3wzzibc3RCO" scrolling="no" frameborder="none" allow="encrypted-media"></iframe>
+            </article>
+            <article class="episodes__episode">
+                <iframe class="episodes__episode--2" src="https://open.spotify.com/embed-podcast/show/2ySVrxGkN6n6frMTo9Nsrt"  scrolling="no" frameborder="none" overflow ="hidden" allow="encrypted-media"></iframe>
+            </article>
+            <article class="episodes__episode">
+                <iframe class="episodes__episode--3" src="https://open.spotify.com/embed-podcast/show/2ySVrxGkN6n6frMTo9Nsrt"  scrolling="no" frameborder="none" overflow ="hidden" allow="encrypted-media"></iframe>
+            </article>
+            <article class="episodes__episode">
+                <iframe class="episodes__episode--4" src="https://open.spotify.com/embed-podcast/show/2ySVrxGkN6n6frMTo9Nsrt"  scrolling="no" frameborder="none" overflow ="hidden" allow="encrypted-media"></iframe>
+            </article>
+        </div>
     </section>
+    <section class="phone">
+        <img src="images/phone.png" alt="Phone" class="phone__img">
+    </section>
+
 </body>
 </html>
