seccion de donde vinimos e invitados

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" rel="text/css" href="css/style.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&family=IBM+Plex+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&family=IBM+Plex+Sans:wght@400;600&display=swap"
+        rel="stylesheet">
     <title>Podcast Project</title>
 </head>
+
 <body>
     <!--Nav Section-->
     <div class="navigation">
@@ -34,32 +39,70 @@
         <h1 class="heading__1">
             Hello <span class="heading__span">world</span> pale blue dot.
         </h1>
-        <p class="paragraph">Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días.</p>
+        <p class="paragraph">Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada
+            15 días.</p>
         <a href="#" class="btn">CONOCÉ MÁS</a>
     </header>
 
     <!--Episodes section-->
     <section class="episodes">
         <div class="episodes__container">
-            <h1 class="episodes__heading">Episodios</h1> 
-        
+            <h1 class="episodes__heading">Episodios</h1>
+
             <article class="episodes__episode">
-                <iframe class="episodes__episode--1" src="https://open.spotify.com/embed-podcast/episode/0Inn9ZOJrwC3wzzibc3RCO" scrolling="no" frameborder="none" allow="encrypted-media"></iframe>
+                <iframe class="episodes__episode--1"
+                    src="https://open.spotify.com/embed-podcast/episode/0Inn9ZOJrwC3wzzibc3RCO" scrolling="no"
+                    frameborder="no" allow="encrypted-media"></iframe>
             </article>
             <article class="episodes__episode">
-                <iframe class="episodes__episode--2" src="https://open.spotify.com/embed-podcast/show/2ySVrxGkN6n6frMTo9Nsrt"  scrolling="no" frameborder="none" overflow ="hidden" allow="encrypted-media"></iframe>
+                <iframe class="episodes__episode--2"
+                    src="https://open.spotify.com/embed-podcast/show/2ySVrxGkN6n6frMTo9Nsrt" scrolling="no"
+                    frameborder="no" overflow="hidden" allow="encrypted-media"></iframe>
             </article>
             <article class="episodes__episode">
-                <iframe class="episodes__episode--3" src="https://open.spotify.com/embed-podcast/show/2ySVrxGkN6n6frMTo9Nsrt"  scrolling="no" frameborder="none" overflow ="hidden" allow="encrypted-media"></iframe>
+                <iframe class="episodes__episode--3"
+                    src="https://open.spotify.com/embed-podcast/show/2ySVrxGkN6n6frMTo9Nsrt" scrolling="no"
+                    frameborder="no" overflow="hidden" allow="encrypted-media"></iframe>
             </article>
             <article class="episodes__episode">
-                <iframe class="episodes__episode--4" src="https://open.spotify.com/embed-podcast/show/2ySVrxGkN6n6frMTo9Nsrt"  scrolling="no" frameborder="none" overflow ="hidden" allow="encrypted-media"></iframe>
+                <iframe class="episodes__episode--4"
+                    src="https://open.spotify.com/embed-podcast/show/2ySVrxGkN6n6frMTo9Nsrt" scrolling="no"
+                    frameborder="no" overflow="hidden" allow="encrypted-media"></iframe>
             </article>
         </div>
     </section>
-    <section class="phone">
-        <img src="images/phone.png" alt="Phone" class="phone__img">
+    <section class="donde-venimos">
+        <div class="donde-venimos__phone">
+            <img src="images/phone.png" alt="Phone" class="donde-venimos__phone--img">
+        </div>
+        <div class="donde-venimos__text">
+            <h1 class="donde-venimos__text--heading">De dónde venimos</h1>
+            <p class="paragraph">Our posturings, our imagined self-importance, the delusion that we have some privileged
+                position in the Universe, are challenged by this point of pale light.
+                Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this
+                vastness,
+                there is no hint that help will come from elsewhere to save us from ourselves.</p>
+        </div>
+    </section>
+
+    <section class="invitados-especiales">
+        <h1 class="invitados-especiales__heading">
+            Invitadas/os estelares
+        </h1>
+        <div class="invitados-especiales__imagenes">
+            <img src="images/grace-hopper.png" alt="Grace Hopper" class="invitados-especiales__imagenes--photo">
+            <img src="images/Katie-Bouman.png" alt="Katie Bouman" class="invitados-especiales__imagenes--photo">
+            <img src="images/Margaret_Hamilton.png" alt="Margaret Hamilton"
+                class="invitados-especiales__imagenes--photo">
+            <img src="images/An E.R.A.Univac 1103 computer in the 1950s.png"
+                alt="An E.R.A.Univac 1103 computer in the 1950s" class="invitados-especiales__imagenes--photo">
+            <img src="images/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png"
+                alt="Computer operators with an Eniac — the world’s first programmable general-purpose computer"
+                class="invitados-especiales__imagenes--photo">
+            <img src="images/susan-kare.png" alt="Susan Kare" class="invitados-especiales__imagenes--photo">
+        </div>
     </section>
 
 </body>
+
 </html>
