sección alguno de nuestros temas

--- a/index.html
+++ b/index.html
@@ -103,6 +103,34 @@
         </div>
     </section>
 
+    <section class="nuestros-temas">
+        <h1 class="nuestros-temas__heading">Algunos de nuestros temas</h1>
+        <div class="nuestro-temas__tema">
+            <figure class="nuestros-temas__figure">
+                <img src="images/icon1.svg" alt="icon1" class="nuestros-temas__figure--img">
+                <h2 class="nuestros-temas__figure--heading2">Trabajo remoto</h2>
+            </figure>
+        </div>
+        <div class="nuestro-temas__tema">
+            <figure class="nuestros-temas__figure">
+                <img src="images/icon2.svg" alt="icon2" class="nuestros-temas__figure--img">
+                <h2 class="nuestros-temas__figure--heading2">Repensando la programación</h2>
+            </figure>
+        </div>
+        <div class="nuestro-temas__tema">
+            <figure class="nuestros-temas__figure">
+                <img src="images/icon3.svg" alt="icon3" class="nuestros-temas__figure--img">
+                <h2 class="nuestros-temas__figure--heading2">Bases del código</h2>
+            </figure>
+        </div>
+        <div class="nuestro-temas__tema">
+            <figure class="nuestros-temas__figure">
+                <img src="images/icon4.svg" alt="icon4" class="nuestros-temas__figure--img">
+                <h2 class="nuestros-temas__figure--heading2">Seguridad informática</h2>
+            </figure>
+        </div>
+    </section>
+
 </body>
 
 </html>
