footer and fixing button ultimas-novedades behavior

--- a/index.html
+++ b/index.html
@@ -131,6 +131,27 @@
         </div>
     </section>
 
+    <section class="ultimas-novedades">
+        <div class="ultimas-novedades__container">
+            <h1 class="ultimas-novedades__container--heading">¿Querés las últimas novedades?</h1>
+            <a href="#" class="btn escucha">ESCUCHÁ LOS EPISODIOS</a>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <p class="paragraph">
+            © 2019— Hello blue pale dot
+        </p>
+        <div class="footer__iconos">
+            <i class="fab fa-spotify fa-2x"></i>
+            <i class="fab fa-instagram fa-2x"></i>
+            <i class="fab fa-twitter fa-2x"></i>
+            <i class="fab fa-facebook fa-2x"></i>
+            <i class="fab fa-telegram fa-2x"></i>
+        </div>
+        
+    </footer>
+
 </body>
 
 </html>
