funcionalidad botones y scroll behaviour

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
         </h1>
         <p class="paragraph">Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada
             15 días.</p>
-        <a href="#" class="btn">CONOCÉ MÁS</a>
+        <a href="#donde-venimos" class="btn">CONOCÉ MÁS</a>
     </header>
 
     <!--Episodes section-->
-    <section class="episodes">
+    <section class="episodes" id="episodios">
         <div class="episodes__container">
             <h1 class="episodes__heading">Episodios</h1>
 
-            <article class="episodes__episode">
+            <article class="episodes__episode" >
                 <iframe class="episodes__episode--1"
                     src="https://open.spotify.com/embed-podcast/episode/0Inn9ZOJrwC3wzzibc3RCO" scrolling="no"
                     frameborder="no" allow="encrypted-media"></iframe>
@@ -71,7 +71,7 @@
             </article>
         </div>
     </section>
-    <section class="donde-venimos">
+    <section class="donde-venimos" id="donde-venimos">
         <div class="donde-venimos__phone">
             <img src="images/phone.png" alt="Phone" class="donde-venimos__phone--img">
         </div>
@@ -134,7 +134,7 @@
     <section class="ultimas-novedades">
         <div class="ultimas-novedades__container">
             <h1 class="ultimas-novedades__container--heading">¿Querés las últimas novedades?</h1>
-            <a href="#" class="btn escucha">ESCUCHÁ LOS EPISODIOS</a>
+            <a href="#episodios" class="btn escucha">ESCUCHÁ LOS EPISODIOS</a>
         </div>
     </section>
 
