fixing gap among episodes

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
         <nav class="navigation__nav">
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="#" class="navigation__link">EPISODIOS</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">NOSOTROS</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">ENTREVISTAS</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">TOPICOS</a></li>
+                <li class="navigation__item"><a href="#episodios" class="navigation__link">EPISODIOS</a></li>
+                <li class="navigation__item"><a href="#donde-venimos" class="navigation__link">NOSOTROS</a></li>
+                <li class="navigation__item"><a href="#entrevistas" class="navigation__link">ENTREVISTAS</a></li>
+                <li class="navigation__item"><a href="#nuestros-temas" class="navigation__link">TOPICOS</a></li>
             </ul>
         </nav>
     </div>
@@ -85,7 +85,7 @@
         </div>
     </section>
 
-    <section class="invitados-especiales">
+    <section class="invitados-especiales" id="entrevistas">
         <h1 class="invitados-especiales__heading">
             Invitadas/os estelares
         </h1>
@@ -103,7 +103,7 @@
         </div>
     </section>
 
-    <section class="nuestros-temas">
+    <section class="nuestros-temas" id="nuestros-temas">
         <h1 class="nuestros-temas__heading">Algunos de nuestros temas</h1>
         <div class="nuestro-temas__tema">
             <figure class="nuestros-temas__figure">
