media query 600px

--- a/index.html
+++ b/index.html
@@ -41,14 +41,13 @@
         </h1>
         <p class="paragraph">Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada
             15 días.</p>
-        <a href="#donde-venimos" class="btn">CONOCÉ MÁS</a>
+        <a href="#donde-venimos" class="btn conoce">CONOCÉ MÁS</a>
     </header>
 
     <!--Episodes section-->
     <section class="episodes" id="episodios">
+        <h1 class="episodes__heading">Episodios</h1>
         <div class="episodes__container">
-            <h1 class="episodes__heading">Episodios</h1>
-
             <article class="episodes__episode">
                 <iframe class="episodes__episode--1"
                     src="https://open.spotify.com/embed-podcast/episode/3CpOb8LsyW97G81VUs9kKL" scrolling="no"
@@ -138,7 +137,7 @@
     </section>
 
     <footer class="footer">
-        <p class="paragraph">
+        <p class="footer__paragraph">
             © 2019— Hello blue pale dot
         </p>
         <div class="footer__iconos">
