media queries medium and largest

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                     frameborder="no" allow="encrypted-media"></iframe>
             </article>
             <article class="episodes__episode">
-                <iframe class="episodes__episode--2" src="https://open.spotify.com/embed-podcast/episode/3EcsliayXuiJaxVTFuwtyw" scrolling="no"
+                <iframe class="episodes__episode--2"
+                    src="https://open.spotify.com/embed-podcast/episode/3EcsliayXuiJaxVTFuwtyw" scrolling="no"
                     frameborder="no" overflow="hidden" allow="encrypted-media"></iframe>
             </article>
             <article class="episodes__episode">
@@ -76,7 +77,7 @@
         <div class="donde-venimos__text">
             <h1 class="donde-venimos__text--heading">De dónde venimos</h1>
             <p class="paragraph">Our posturings, our imagined self-importance, the delusion that we have some privileged
-                position in the Universe, are challenged by this point of pale light.
+                position in the Universe, are challenged by this point of pale light. <br>
                 Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this
                 vastness,
                 there is no hint that help will come from elsewhere to save us from ourselves.</p>
@@ -102,30 +103,33 @@
     </section>
 
     <section class="nuestros-temas" id="nuestros-temas">
+
         <h1 class="nuestros-temas__heading">Algunos de nuestros temas</h1>
-        <div class="nuestro-temas__tema">
-            <figure class="nuestros-temas__figure">
-                <img src="images/icon1.svg" alt="icon1" class="nuestros-temas__figure--img">
-                <h2 class="nuestros-temas__figure--heading2">Trabajo remoto</h2>
-            </figure>
-        </div>
-        <div class="nuestro-temas__tema">
-            <figure class="nuestros-temas__figure">
-                <img src="images/icon2.svg" alt="icon2" class="nuestros-temas__figure--img">
-                <h2 class="nuestros-temas__figure--heading2">Repensando la programación</h2>
-            </figure>
-        </div>
-        <div class="nuestro-temas__tema">
-            <figure class="nuestros-temas__figure">
-                <img src="images/icon3.svg" alt="icon3" class="nuestros-temas__figure--img">
-                <h2 class="nuestros-temas__figure--heading2">Bases del código</h2>
-            </figure>
-        </div>
-        <div class="nuestro-temas__tema">
-            <figure class="nuestros-temas__figure">
-                <img src="images/icon4.svg" alt="icon4" class="nuestros-temas__figure--img">
-                <h2 class="nuestros-temas__figure--heading2">Seguridad informática</h2>
-            </figure>
+        <div class="nuestros-temas__container">
+            <div class="nuestros-temas__tema">
+                <figure class="nuestros-temas__figure">
+                    <img src="images/icon1.svg" alt="icon1" class="nuestros-temas__figure--img">
+                    <h2 class="nuestros-temas__figure--heading2">Trabajo remoto</h2>
+                </figure>
+            </div>
+            <div class="nuestros-temas__tema">
+                <figure class="nuestros-temas__figure">
+                    <img src="images/icon2.svg" alt="icon2" class="nuestros-temas__figure--img">
+                    <h2 class="nuestros-temas__figure--heading2">Repensando la programación</h2>
+                </figure>
+            </div>
+            <div class="nuestros-temas__tema">
+                <figure class="nuestros-temas__figure">
+                    <img src="images/icon3.svg" alt="icon3" class="nuestros-temas__figure--img">
+                    <h2 class="nuestros-temas__figure--heading2">Bases del código</h2>
+                </figure>
+            </div>
+            <div class="nuestros-temas__tema">
+                <figure class="nuestros-temas__figure">
+                    <img src="images/icon4.svg" alt="icon4" class="nuestros-temas__figure--img">
+                    <h2 class="nuestros-temas__figure--heading2">Seguridad informática</h2>
+                </figure>
+            </div>
         </div>
     </section>
 
