--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
             © 2019— Hello blue pale dot
         </p>
         <div class="footer__iconos">
-            <i class="fab fa-spotify fa-2x"></i>
-            <i class="fab fa-instagram fa-2x"></i>
-            <i class="fab fa-twitter fa-2x"></i>
-            <i class="fab fa-facebook fa-2x"></i>
-            <i class="fab fa-telegram fa-2x"></i>
+            <a href="https://open.spotify.com/" target="_blank" class="footer__iconos--link"><i class="fab fa-spotify fa-2x"></i></a>
+            <a href="https://www.instagram.com/" target="_blank" class="footer__iconos--link"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="https://twitter.com/" target="_blank" class="footer__iconos--link"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="https://www.facebook.com/" target="_blank" class="footer__iconos--link"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="https://web.telegram.org/" target="_blank" class="footer__iconos--link"><i class="fab fa-telegram fa-2x"></i></a>
         </div>
 
     </footer>
