changing img name

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 class="invitados-especiales__imagenes--photo">
             <img src="images/An E.R.A.Univac 1103 computer in the 1950s.png"
                 alt="An E.R.A.Univac 1103 computer in the 1950s" class="invitados-especiales__imagenes--photo">
-            <img src="images/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png"
+            <img src="images/Computer operators with an Eniac-the world’s first programmable general-purpose computer.png"
                 alt="Computer operators with an Eniac — the world’s first programmable general-purpose computer"
                 class="invitados-especiales__imagenes--photo">
             <img src="images/susan-kare.png" alt="Susan Kare" class="invitados-especiales__imagenes--photo">
