--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
             <img src="images/Katie-Bouman.png" alt="Katie Bouman" class="invitados-especiales__imagenes--photo">
             <img src="images/Margaret_Hamilton.png" alt="Margaret Hamilton"
                 class="invitados-especiales__imagenes--photo">
-            <img src="images/An E.R.A.Univac 1103 computer in the 1950s.png"
+            <img src="images/ERA_Univac.png"
                 alt="An E.R.A.Univac 1103 computer in the 1950s" class="invitados-especiales__imagenes--photo">
-            <img src="images/Computer operators with an Eniac-the world’s first programmable general-purpose computer.png"
+            <img src="images/Computer-operator.png"
                 alt="Computer operators with an Eniac — the world’s first programmable general-purpose computer"
                 class="invitados-especiales__imagenes--photo">
             <img src="images/susan-kare.png" alt="Susan Kare" class="invitados-especiales__imagenes--photo">
